--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Title</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,33 +13,14 @@
     <!-- <script src="js/vendor/modernizr-2.8.3.min.js"></script> -->
 </head>
 <body>
-    <!--[if lt IE 10]>
+    <!--[if lt IE 9]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-	<header id="header">
-	    <div class="page">
-	        <div id="header-wrapper">
-	            <h1 class="site-title"><i class="fa fa-apple"></i>GULP TEST Page</h1>
-	        </div>
-	    </div>
-	</header>
-  
-	<div id="content">
-	    <div class="page">
-	        <div id="primary">
-	            <h2 id="sweet-header"><a href="style-guide.html">Style Sheet?</a></h2>
-	             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
-	            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
-	            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
-	            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
-	        </div>
-	        <aside id="aside">
-	            <h2>Awesome Aside</h2>
-	            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
-	        </aside>
-	       
-	    </div>
-	</div> <!-- end content -->
+
+	<?php include 'header.html';?>
+	<?php include 'content.html';?>
+	<?php include 'footer.html';?>
+
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
         // (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -49,8 +30,8 @@
         // r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
         // ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
-
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/jquery.easing/js/jquery.easing.js"></script>
     <script src="js/main.min.js"></script>
 
 </body>
