--- a/app/footer.html
+++ b/app/footer.html
@@ -38,9 +38,7 @@
 
                 <a href="#" class="lockup">
                     <span class="sprite-footer-logo"></span>
-                    <span class="footer-logo-text">
-                        성 바오로 정하상 천주교회<span class="eng">ST. PAUL CHONG HA-SANG ROMAN CATHOLIC CHURCH</span>
-                    </span>
+                    <span class="name">성 바오로 정하상 천주교회 ST. PAUL CHONG HA-SANG ROMAN CATHOLIC CHURCH</span>
                 </a>
             </div>
 
@@ -62,9 +60,7 @@
             
             <a href="#" class="lockup-mobile">
                 <span class="sprite-footer-logo"></span>
-                <span class="footer-logo-text">
-                    성 바오로 정하상 천주교회<span class="eng">ST. PAUL CHONG HA-SANG ROMAN CATHOLIC CHURCH</span>
-                </span>
+                <span class="name">성 바오로 정하상 천주교회 ST. PAUL CHONG HA-SANG ROMAN</span>
             </a>
 
              <span class="copyright">COPYRIGHT &copy;2016 성 바오로 정하상 천주교회</span>
