--- a/app/header.html
+++ b/app/header.html
@@ -1,12 +1,12 @@
 
 	<header id="header">
         <div class="masthead">
-            <a class="logo-container" href="http://www.stpaulqueens.org" title="성 바오로 정하상 천주교회">
-                <span class="sprite-logo"></span>
-                <h1>
-                    성 바오로 정하상 천주교회<span class="eng">ST. PAUL CHONG HA-SANG ROMAN CATHOLIC CHURCH</span>
-                </h1>
-            </a>
+            <h1>
+                <a class="logo-container" href="http://www.stpaulqueens.org" title="성 바오로 정하상 천주교회">
+                    <span class="sprite-logo"></span>
+                    <span class="name">성 바오로 정하상 천주교회 ST. PAUL CHONG HA-SANG ROMAN CATHOLIC CHURCH</span>
+                </a>
+            </h1>
             <a id="nav-toggle" href="#">
                 <div></div>
                 <div></div>
@@ -101,7 +101,7 @@
                 </li>
             </ul>
             <div class="search">
-                <form>
+                <form action="?">
                     <input type="text" name="search-text" value="검색"><input type="submit" value="검색" class="sprite-search">
                 </form>
             </div>
