first set of template

--- a/app/content.html
+++ b/app/content.html
@@ -1,24 +1,36 @@
-	<div id="content" class="stPaulOffice">
+	<div id="content" class="oneCommunity">
 		<div class="hero">
 			<div class="wrapper">
-	    		<h3><div class="sprite-bell icon"></div><span>성당 사무실</span></h3>
-	    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
-	    		<ul>
-	    			<li>Office Hour:  9AM - 6PM (월 - 토)</li>
-	    			<li>32-15 Parsons Boulevard<br />Flushing, NY 11354</li>
-	    			<li><a href="mailto:stpauloffice1973@gmail.com">stpauloffice1973@gmail.com</a></li>
-	    			<li>Tel: 718-321-7676<br />Fax: 718-321-7005</li>
-	    		</ul>
-
-	    		<div class="links">
-	    			<a class="util-box-btn" href="#">
-		    			지난주 주보<span>2016년 7월 24일</span>
-		    			<span class="sprite-download btn1"></span>
-		    		</a>
-	    			<a class="util-box-btn" href="#">
-		    			금주 주보<span>2016년 7월 31일</span>
-		    			<span class="sprite-download btn1"></span>
-		    		</a>
+	    		<h3><div class="sprite-bell"></div><span>성당 사무실</span></h3>
+	    		<div class="hero-content-img"><img src="images/hero-item-img.jpg"></div>
+	    		<div class="hero-content vert-column">
+		    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?
+		    		</p>
+		    		<a class="hero-txt-btn" href="#">더 읽기 <span class="icon sprite-link-sm"></span></a>
+		    		<ul class="show-desktop">
+		    			<li class="tall-margin">Office Hour: <strong>9AM - 6PM (월 - 토)</strong></li>
+		    			<!-- <li>32-15 Parsons Boulevard<br />Flushing, NY 11354</li> -->
+		    			<li><a href="mailto:stpauloffice1973@gmail.com">stpauloffice1973@gmail.com</a></li>
+		    			<li>Tel: <a href="tel:718-321-7676">718-321-7676</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Fax: <a href="tel:718-321-7005">718-321-7005</a></li>
+		    		</ul>
+		    		<div class="util-box">
+		    			<a class="util-box-btn" href="#">
+                            <div class="txt">지난주 <span>주보</span><span class="sm-txt">2016년 7월 24일</span></div>
+                            <div class="icon sprite-download"></div>
+                        </a>
+                        <a class="util-box-btn" href="#">
+                            <div class="txt">금주 <span>주보</span><span class="sm-txt">2016년 12월 24일</span></div>
+                            <div class="icon sprite-download"></div>
+                        </a>
+                        <a class="util-box-btn" href="#">
+                            <div class="txt">매일 미사</div>
+                            <div class="icon sprite-link"></div>
+                        </a>
+                        <a class="util-box-btn" href="#">
+                            <div class="txt">가톨릭 인터넷 <span>굿뉴스</span></div>
+                            <div class="icon sprite-link-ext"></div>
+                        </a>
+		    		</div>
 	    		</div>
     		</div>
     		<div class="sub-nav-bg"></div>
