--- a/app/header.html
+++ b/app/header.html
@@ -2,7 +2,7 @@
 	<header id="header">
         <div class="masthead">
             <h1>
-                <a class="logo-container" href="http://www.stpaulqueens.org" title="성 바오로 정하상 천주교회">
+                <a class="logo-container" href="index.html" title="성 바오로 정하상 천주교회">
                     <span class="sprite-logo"></span>
                     <span class="name">성 바오로 정하상 천주교회 ST. PAUL CHONG HA-SANG ROMAN CATHOLIC CHURCH</span>
                 </a>
@@ -16,7 +16,7 @@
 	    <div class="wrapper">
             <ul class="navigation">
                 <li class="section">
-                    <a href="#" title="성당사무실">
+                    <a href="stpaul-office.html" title="성당사무실">
                         <span class="sprite-bell icon"></span>
                         <span class="sprite-bell icon-hover"></span>
                         성당 사무실
@@ -30,7 +30,7 @@
                     </ul>
                 </li>
                 <li class="section">
-                    <a href="#" title="신앙생활">
+                    <a href="spiritual-life.html" title="신앙생활">
                         <span class="sprite-fish icon"></span>
                         <span class="sprite-fish icon-hover"></span>
                         신앙 생활
@@ -44,7 +44,7 @@
                     </ul>
                 </li>
                 <li class="section">
-                    <a href="#" title="단체안내">
+                    <a href="one-community.html" title="단체안내">
                         <span class="sprite-grape icon"></span>
                         <span class="sprite-grape icon-hover"></span>
                         단체 안내
@@ -58,7 +58,7 @@
                     </ul>
                 </li>
                 <li class="section">
-                    <a href="#" title="본당소개">
+                    <a href="our-parish.html" title="본당소개">
                         <span class="sprite-cup icon"></span>
                         <span class="sprite-cup icon-hover"></span>
                         본당 소개
@@ -72,7 +72,7 @@
                     </ul>
                 </li>
                 <li class="section">
-                    <a href="#" title="교육관">
+                    <a href="education-center.html" title="교육관">
                         <span class="sprite-bread icon"></span>
                         <span class="sprite-bread icon-hover"></span>
                         교육 센터
@@ -86,7 +86,7 @@
                     </ul>
                 </li>
                 <li class="section">
-                    <a href="#" title="자료실/갤러리">
+                    <a href="media-library.html" title="자료실/갤러리">
                         <span class="sprite-album icon"></span>
                         <span class="sprite-album icon-hover"></span>
                         자료실/갤러리
@@ -101,6 +101,7 @@
                 </li>
             </ul>
             <div class="search">
+                <div class="icon sprite-search"></div>
                 <form action="?">
                     <input type="text" name="search-text" value="검색"><input type="submit" value="검색" class="sprite-search">
                 </form>
