--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,134 @@
     <![endif]-->
 
 	<?php include 'header.html';?>
-	<?php include 'content.html';?>
+	
+
+
+     <div id="content" class="stPaulHome">
+        <div class="hero">
+            <div class="wrapper">
+                <h3><div class="sprite-bell"></div><span>성당 사무실</span></h3>
+                <div class="hero-content-img ver-column"><img src="images/hero-item-img.jpg"></div>
+                <div class="hero-content ver-column">
+                    <span class="subhead">메인 섹션 섭타이틀</span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?
+                    </p>
+                    <a class="hero-txt-btn" href="#">더 읽기 <span class="icon sprite-link-sm"></span></a>
+                    <ul class="show-desktop add-marginBottom">
+                        <li class="tall-margin">Office Hour: <strong>9AM - 6PM (월 - 토)</strong></li>
+                        <!-- <li>32-15 Parsons Boulevard<br />Flushing, NY 11354</li> -->
+                        <li><a href="mailto:stpauloffice1973@gmail.com">stpauloffice1973@gmail.com</a></li>
+                        <li>Tel: <a href="tel:718-321-7676">718-321-7676</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Fax: <a href="tel:718-321-7005">718-321-7005</a></li>
+                    </ul>
+                    <div class="util-box">
+                        <a class="util-box-btn" href="#">
+                            <div class="txt">지난주 <span>주보</span><span class="sm-txt">2016년 7월 24일</span></div>
+                            <div class="icon sprite-download"></div>
+                        </a>
+                        <a class="util-box-btn" href="#">
+                            <div class="txt">금주 <span>주보</span><span class="sm-txt">2016년 12월 24일</span></div>
+                            <div class="icon sprite-download"></div>
+                        </a>
+                        <a class="util-box-btn" href="#">
+                            <div class="txt">매일 미사</div>
+                            <div class="icon sprite-link"></div>
+                        </a>
+                        <a class="util-box-btn" href="#">
+                            <div class="txt">가톨릭 인터넷 <span>굿뉴스</span></div>
+                            <div class="icon sprite-link-ext"></div>
+                        </a>
+                    </div>
+                </div>
+                <div class="util-box">
+                    <a class="util-box-btn" href="#">
+                        <div class="txt">지난주 <span>주보</span><span class="sm-txt">2016년 7월 24일</span></div>
+                        <div class="icon sprite-download"></div>
+                    </a>
+                    <a class="util-box-btn" href="#">
+                        <div class="txt">금주 <span>주보</span><span class="sm-txt">2016년 12월 24일</span></div>
+                        <div class="icon sprite-download"></div>
+                    </a>
+                    <a class="util-box-btn" href="#">
+                        <div class="txt">매일 미사</div>
+                        <div class="icon sprite-link"></div>
+                    </a>
+                    <a class="util-box-btn" href="#">
+                        <div class="txt">가톨릭 인터넷 <span>굿뉴스</span></div>
+                        <div class="icon sprite-link-ext"></div>
+                    </a>
+                </div>
+            </div>
+            <div class="sub-nav-bg"></div>
+            <div class="sub-nav">
+                <ul>
+                    <li><a href="#" class="sprite-top-btn">BACK TO TOP</a></li>
+                    <li><a href="#" class="sub-nav-btn">스케줄/시간표</a></li>
+                    <li><div class="sub-nav-divider"></div></li>
+                    <li><a href="#" class="sub-nav-btn">공지사항</a></li>
+                    <li><div class="sub-nav-divider"></div></li>
+                    <li><a href="#" class="sub-nav-btn">본당일정/달력</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="content-body">
+            <div class="content-sect1">
+                <div class="wrapper">
+                    <div class="main-body">
+                        <h3><a href="style-guide.html">스케줄/시간표</a></h3>
+                        <p>대통령은 제4항과 제5항의 규정에 의하여 확정된 법률을 지체없이 공포하여야 한다. 제5항에 의하여 법률이 확정된 후 또는 제4항에 의한 확정법률이 정부에 이송된 후 5일 이내에 대통령이 공포하지 아니할 때에는 국회의장이 이를 공포한다. 형사피고인은 유죄의 판결이 확정될 때까지는 무죄로 추정된다.</p>
+
+                        <p>대통령·국무총리·국무위원·행정각부의 장·헌법재판소 재판관·법관·중앙선거관리위원회 위원·감사원장·감사위원 기타 법률이 정한 공무원이 그 직무집행에 있어서 헌법이나 법률을 위배한 때에는 국회는 탄핵의 소추를 의결할 수 있다. 헌법재판소의 장은 국회의 동의를 얻어 재판관중에서 대통령이 임명한다.</p>
+
+                        <p>모든 국민은 언론·출판의 자유와 집회·결사의 자유를 가진다. 공공필요에 의한 재산권의 수용·사용 또는 제한 및 그에 대한 보상은 법률로써 하되, 정당한 보상을 지급하여야 한다. 비상계엄이 선포된 때에는 법률이 정하는 바에 의하여 영장제도, 언론·출판·집회·결사의 자유, 정부나 법원의 권한에 관하여 특별한 조치를 할 수 있다.</p>
+
+                        <p>국회의원의 선거구와 비례대표제 기타 선거에 관한 사항은 법률로 정한다. 위원은 탄핵 또는 금고 이상의 형의 선고에 의하지 아니하고는 파면되지 아니한다. 국회의원은 법률이 정하는 직을 겸할 수 없다. 모든 국민은 그 보호하는 자녀에게 적어도 초등교육과 법률이 정하는 교육을 받게 할 의무를 진다.</p>
+
+                        <p>대통령이 궐위되거나 사고로 인하여 직무를 수행할 수 없을 때에는 국무총리, 법률이 정한 국무위원의 순서로 그 권한을 대행한다. 제2항과 제3항의 처분에 대하여는 법원에 제소할 수 없다. 대통령은 내우·외환·천재·지변 또는 중대한 재정·경제상의 위기에 있어서 국가의 안전보장 또는 공공의 안녕질서를 유지하기 위하여 긴급한 조치가 필요하고 국회의 집회를 기다릴 여유가 없을 때에 한하여 최소한으로 필요한 재정·경제상의 처분을 하거나 이에 관하여 법률의 효력을 가지는 명령을 발할 수 있다.</p>
+                    </div>
+                    <aside class="side-body">
+                        <h3>Awesome Aside</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
+                    </aside>
+                </div>
+            </div>
+
+            <div class="content-sect2">
+                <div class="wrapper">
+                    <div id="primary">
+                        <h3 id="sweet-header"><a href="style-guide.html">공지사항</a></h3>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
+                    </div>
+                    <aside id="aside">
+                        <h3>Awesome Aside</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
+                    </aside>
+                </div>
+            </div>
+
+            <div class="content-sect3">
+                <div class="wrapper">
+                    <div id="primary">
+                        <h3 id="sweet-header"><a href="style-guide.html">본당일정/달력</a></h3>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
+                    </div>
+                    <aside id="aside">
+                        <h3>Awesome Aside</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
+                    </aside>
+                </div>
+            </div>
+            
+        </div>
+    </div> <!-- end content -->
+
+
+
 	<?php include 'footer.html';?>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
