main template update

--- a/app/header-bottom.html
+++ b/app/header-bottom.html
@@ -1,34 +1,8 @@
 
-	<header id="header">
-        <div class="masthead">
-            <h1>
-                <a class="logo-container" href="index.html" title="성 바오로 정하상 천주교회">
-                    <span class="sprite-logo"></span>
-                    <span class="name">성 바오로 정하상 천주교회 ST. PAUL CHONG HA-SANG ROMAN CATHOLIC CHURCH</span>
-                </a>
-            </h1>
-            <a id="nav-toggle" href="#">
-                <div></div>
-                <div></div>
-                <div></div>
-            </a>
-        </div>
-        
-        <div class="sub-nav">
-            <ul>
-                <li><a href="#top" class="sprite-top-btn">BACK TO TOP</a></li>
-                <li><a href="#schedule" class="sub-nav-btn">스케줄/시간표</a></li>
-                <li><div class="sub-nav-divider"></div></li>
-                <li><a href="#bulletin" class="sub-nav-btn">공지사항</a></li>
-                <li><div class="sub-nav-divider"></div></li>
-                <li><a href="#calendar" class="sub-nav-btn">본당일정/달력</a></li>
-            </ul>
-        </div>
-
 	    <div class="wrapper">
             <ul class="navigation">
                 <li class="section">
-                    <a href="stpaul-office.html" title="성당사무실">
+                    <a class="stpaul-stPaulOffice" href="stpaul-office.html" title="성당사무실">
                         <span class="sprite-bell icon"></span>
                         <span class="sprite-bell icon-hover"></span>
                         성당 사무실
@@ -42,7 +16,7 @@
                     </ul>
                 </li>
                 <li class="section">
-                    <a href="spiritual-life.html" title="신앙생활">
+                    <a class="stpaul-spiritualLife" href="spiritual-life.html" title="신앙생활">
                         <span class="sprite-fish icon"></span>
                         <span class="sprite-fish icon-hover"></span>
                         신앙 생활
@@ -56,7 +30,7 @@
                     </ul>
                 </li>
                 <li class="section">
-                    <a href="one-community.html" title="단체안내">
+                    <a class="stpaul-oneCommunity" href="one-community.html" title="단체안내">
                         <span class="sprite-grape icon"></span>
                         <span class="sprite-grape icon-hover"></span>
                         단체 안내
@@ -70,7 +44,7 @@
                     </ul>
                 </li>
                 <li class="section">
-                    <a href="our-parish.html" title="본당소개">
+                    <a class="stpaul-ourParish" href="our-parish.html" title="본당소개">
                         <span class="sprite-cup icon"></span>
                         <span class="sprite-cup icon-hover"></span>
                         본당 소개
@@ -84,7 +58,7 @@
                     </ul>
                 </li>
                 <li class="section">
-                    <a href="education-center.html" title="교육관">
+                    <a class="stpaul-educationCenter" href="education-center.html" title="교육관">
                         <span class="sprite-bread icon"></span>
                         <span class="sprite-bread icon-hover"></span>
                         교육 센터
@@ -98,7 +72,7 @@
                     </ul>
                 </li>
                 <li class="section">
-                    <a href="media-library.html" title="자료실/갤러리">
+                    <a class="stpaul-mediaLibrary" href="media-library.html" title="자료실/갤러리">
                         <span class="sprite-album icon"></span>
                         <span class="sprite-album icon-hover"></span>
                         자료실/갤러리
@@ -119,5 +93,4 @@
                 </form>
             </div>
 	    </div>
-	</header>
   
