revised initial template v1.3

--- a/app/education-center.html
+++ b/app/education-center.html
@@ -38,6 +38,7 @@
 
      <div id="content">
         <div class="hero">
+            <div class="mobile-fader"></div>
             <div class="wrapper">
                 <h3><div class="sprite-bread"></div><span>성 정하상 교육관</span></h3>
                 <div class="hero-content">
