--- a/app/header-bottom.html
+++ b/app/header-bottom.html
@@ -87,9 +87,8 @@
                 </li>
             </ul>
             <div class="search">
-                <div class="icon sprite-search"></div>
                 <form action="?">
-                    <input type="text" name="search-text" value="검색"><input type="submit" value="검색" class="sprite-search">
+                    <input type="text" name="search-text" value="검색"><button type="submit" value="검색" class="fa fa-search fa-2x">
                 </form>
             </div>
 	    </div>
