--- a/app/media-library.html
+++ b/app/media-library.html
@@ -36,6 +36,7 @@
 
      <div id="content">
         <div class="hero">
+            <div class="mobile-fader"></div>
             <div class="wrapper">
                 <h3><div class="sprite-album"></div><span>자료실/갤러리</span></h3>
                 <div class="hero-content">
