--- a/app/one-community.html
+++ b/app/one-community.html
@@ -38,6 +38,7 @@
 
      <div id="content">
         <div class="hero">
+            <div class="mobile-fader"></div>
             <div class="wrapper">
                 <h3><div class="sprite-grape"></div><span>단체 안내</span></h3>
                 <div class="hero-content-img hor-column"><img src="images/hero-item-h-img.jpg"></div>
