--- a/app/our-parish.html
+++ b/app/our-parish.html
@@ -36,6 +36,7 @@
 
      <div id="content">
         <div class="hero">
+            <div class="mobile-fader"></div>
             <div class="wrapper">
                 <h3><div class="sprite-cup"></div><span>본당 소개</span></h3>
                 <div class="hero-content-img ver-column"><img src="images/hero-item-img.jpg"></div>
