--- a/app/spiritual-life.html
+++ b/app/spiritual-life.html
@@ -36,6 +36,7 @@
 
      <div id="content">
         <div class="hero">
+            <div class="mobile-fader"></div>
             <div class="wrapper">
                 <h3><div class="sprite-fish"></div><span>신앙 생활</span></h3>
                 <div class="hero-content">
