--- a/app/stpaul-office.html
+++ b/app/stpaul-office.html
@@ -37,6 +37,7 @@
 
     <div id="content">
         <div class="hero">
+            <div class="mobile-fader"></div>
             <div class="wrapper">
                 <h3><div class="sprite-bell"></div><span>성당 사무실</span></h3>
                 <div class="hero-content">
@@ -193,7 +194,7 @@
                             </div>
                             <a class="bottom-btn color" href="#"><div class="label">전체 보기<span class="icon sprite-link-sm"></span></div></a>
                         </div>
-                        
+
                         <div class="boxed">
                             <div class="padder">
                                 <h4>중요 자료들<a class="more-link sprite-link" href="#"></a></h4>
