revised initial template v1.6

--- a/app/footer.html
+++ b/app/footer.html
@@ -68,8 +68,13 @@
 	</footer>
     
     <div id="modal-layer">
-        <div class="bg-fade"> </div>
-        <div class="container"> 
+        <div id="container"> 
+            <div class="title"></div>
+            <ul></ul>
+            <div class="photo-container"></div>
+            <a href="#" class="slide-btn left">LEFT</a>
+            <a href="#" class="slide-btn right">RIGHT</a>
+            <a href="#" class="grid-btn">사진 목록</a>
         </div>
         <a href="#" class="close-btn sprite-close-btn">CLOSE</a>
     </div>
