--- a/app/media-library.html
+++ b/app/media-library.html
@@ -198,7 +198,7 @@
                         <h3><a href="#">행사 갤러리</a></h3>
                         <ul>
                             <li>
-                                <a class="photo-btn" href="#">
+                                <a class="photo-btn" href="media-library.html?post-type=gallery">
                                     <div class="thumbnail"><img src="images/pics/pic25.jpg" /></div>
                                     <div class="txt">
                                         <div class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
@@ -208,7 +208,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="photo-btn" href="#">
+                                <a class="photo-btn" href="media-library.html?post-type=gallery&amount=1">
                                     <div class="thumbnail"><img src="images/pics/pic26.jpg" /></div>
                                     <div class="txt">
                                         <div class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
@@ -218,7 +218,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="photo-btn" href="#">
+                                <a class="photo-btn" href="media-library.html?post-type=gallery&amount=2">
                                     <div class="thumbnail"><img src="images/pics/pic27.jpg" /></div>
                                     <div class="txt">
                                         <div class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
@@ -228,7 +228,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="photo-btn" href="#">
+                                <a class="photo-btn" href="media-library.html?title=">
                                     <div class="thumbnail"><img src="images/pics/pic28.jpg" /></div>
                                     <div class="txt">
                                         <div class="title">Lorem ipsum dolor sit amet.</div>
@@ -238,7 +238,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="photo-btn" href="#">
+                                <a class="photo-btn" href="media-library.html?post-type=photo&amount=10&title=성모 승천 대축일 미사">
                                     <div class="thumbnail"><img src="images/pics/pic29.jpg" /></div>
                                     <div class="txt">
                                         <div class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
@@ -248,7 +248,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="photo-btn" href="#">
+                                <a class="photo-btn" href="media-library.html?post-type=photo&amount=10&title=성모 승천 대축일 미사&date=">
                                     <div class="thumbnail"><img src="images/pics/pic30.jpg" /></div>
                                     <div class="txt">
                                         <div class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
@@ -258,7 +258,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="photo-btn" href="#">
+                                <a class="photo-btn" href="media-library.html?post-type=photo&amount=10&title=성모 승천 대축일 미사&date=8/15/16">
                                     <div class="thumbnail"><img src="images/pics/pic31.jpg" /></div>
                                     <div class="txt">
                                         <div class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
@@ -268,10 +268,10 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="photo-btn" href="#JAMES IS TESTING CALLBACK FUNCTION">
+                                <a class="photo-btn" href="media-library.html?post-type=gallery&amount=15&title=성모 승천 대축일 미사&date=8/18/16">
                                     <div class="thumbnail"><img src="images/pics/pic32.jpg" /></div>
                                     <div class="txt">
-                                        <div class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+                                        <div class="title">성모 승천 대축일 미사</div>
                                         <span class="date">8/18/16</span>
                                         <p><span class="divider"></span><span>15</span> pics</p>
                                     </div>
