revised initial template v1.7

--- a/app/footer.html
+++ b/app/footer.html
@@ -72,9 +72,9 @@
             <div class="title"></div>
             <ul></ul>
             <div class="photo-container"></div>
-            <a href="#" class="slide-btn left">LEFT</a>
-            <a href="#" class="slide-btn right">RIGHT</a>
-            <a href="#" class="grid-btn">사진 목록</a>
+            <a href="#" class="slide-btn left">LEFT<span class="sprite-slide-arrow left"></span></a>
+            <a href="#" class="slide-btn right">RIGHT<span class="sprite-slide-arrow right"></span></a>
+            <a href="#" class="grid-btn sprite-grid">사진 목록</a>
         </div>
         <a href="#" class="close-btn sprite-close-btn">CLOSE</a>
     </div>
