--- a/app/index.html
+++ b/app/index.html
@@ -184,6 +184,10 @@
                                     </tr>
                                 </tbody>
                             </table>
+
+                            <div class="event-box">
+                                00:00PM 모든 국민은 결사의 자유를 가진다
+                            </div>
                         </div>
 
                         <div class="boxed">
@@ -315,19 +319,19 @@
                         <h3><a href="#">행사 갤러리</a><a class="more-link sprite-link" href="#"></a></h3>
                         <div class="row">
                             <div class="column">
-                                <a href="#">
+                                <a class="photo-btn" href="media-library.html?post-type=gallery&amount=15&title=성모 승천 대축일 미사&date=8/18/16">
                                     <div class="thumbnail"><img src="images/pics/pic3.jpg" /></div>
                                     <p>Lorem ipsum dolor sit amet</p>
                                 </a>
                             </div>
                             <div class="column">
-                                <a href="#">
+                                <a class="photo-btn" href="media-library.html?post-type=gallery&amount=25&title=성모 승천 대축일 미사&date=8/18/16">
                                     <div class="thumbnail"><img src="images/pics/pic4.jpg" /></div>
                                     <p>Blanditiis aliquid fugit perferendis</p>
                                 </a>
                             </div>
                             <div class="column">
-                                <a href="#">
+                                <a class="photo-btn" href="media-library.html?post-type=gallery&amount=5&title=성모 승천 대축일 미사&date=8/18/16">
                                     <div class="thumbnail"><img src="images/pics/pic5.jpg" /></div>
                                     <p>Suscipit necessitatibus</p>
                                 </a>
@@ -357,7 +361,7 @@
                     <aside class="side-body">
                         <div class="opened sidebar-gallery">
                             <h3><a href="#">성전 갤러리</a><a class="more-link sprite-link" href="#"></a></h3>
-                            <a href="#">
+                            <a class="photo-btn" href="media-library.html?title=성모 승천 대축일 미사&date=8/18/16">
                                 <div class="thumbnail"><img src="images/alter-image.jpg" /></div>
                                 <p>성모승천 대축일</p>
                             </a>
